<resources>
    <string name="app_name">Submission3GithubUser</string>
    <string name="nama">nama</string>
    <string name="username">username</string>
    <string name="repository">repository</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">id</string>
    <string name="user_type">type</string>
    <string name="search">search</string>
    <string name="search_hint">ketik disini</string>
    <string name="tab_text_1">Pengikut</string>
    <string name="tab_text_2">Diikuti</string>
    <string name="save_favorite">Save Favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>